--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --mode development",
+    "startBackend": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
