--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^4.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "ws": "^8.8.1"
   }
 }
