--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "websocket": "^1.0.34",
     "ws": "^8.8.1"
   }
 }
