--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "uuid": "^8.3.2",
     "websocket": "^1.0.34",
     "ws": "^8.8.1"
   }
